--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
-    "paths": {
-      "@pages/*": ["pages/*"],
-      "@components/*": ["components/*"],
-      "@api/*": ["api/*"],
-      "@utils/*": ["utils/*"]
-  }  },
+    "baseUrl": "src"
+  },
   "include": [
-    "src"
+    "src/*"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
