--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "jsx-a11y/no-autofocus": "off",
     "no-console": "off",
     "no-underscore-dangle": "off",
     "react/react-in-jsx-scope": "off",
