--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,11 +22,13 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "react/prop-types": "off",
+    "react/require-default-props": "off",
     "jsx-a11y/no-autofocus": "off",
     "no-console": "off",
     "no-underscore-dangle": "off",
     "react/react-in-jsx-scope": "off",
-    "react/function-component-definition": "off" ,
+    "react/function-component-definition": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "linebreak-style": 0,
